--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "link": "^0.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-maps": "^0.27.1",
     "react-native-svg": "^12.1.0",
     "react-native-web": "~0.13.12"
   },
